# f3dx-router

./: .gitignore  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
crates/f3dx-router/: Cargo.toml
crates/f3dx-router-py/: Cargo.toml
crates/f3dx-router-py/src/: lib.rs
crates/f3dx-router/src/: lib.rs
examples/: smoke.py
python/f3dx_router/: __init__.py
