[workspace]
resolver = "2"
members = ["crates/f3dx-router", "crates/f3dx-router-py"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Federico Benini <smigolsmigol@protonmail.com>"]
license = "MIT"
repository = "https://github.com/smigolsmigol/f3dx-router"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
thiserror = "2.0"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
