[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "f3dx-router"
version = "0.0.2"
description = "In-process Rust router for LLM providers. Hedged-parallel + 429/5xx hot-swap < 1ms. Composes with hosted gateways like llmkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Federico Benini", email = "smigolsmigol@protonmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.10",
]

[tool.maturin]
manifest-path = "crates/f3dx-router-py/Cargo.toml"
module-name = "f3dx_router._native"
features = ["pyo3/extension-module"]
python-source = "python"

[tool.ruff]
line-length = 100
target-version = "py310"
