[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f3dx-router"
version = "0.0.4"
description = "DEPRECATED. Consolidated into f3dx[router]. Install `f3dx` and import from `f3dx.router`."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Federico Benini", email = "smigolsmigol@protonmail.com" },
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
# Final transition release. Re-exports from the new location at f3dx.router;
# emits DeprecationWarning on import. Will be yanked from PyPI 4-6 months
# after this release lands. New users: `pip install f3dx[router]`.
dependencies = [
    "f3dx>=0.0.18",
]

[tool.hatch.build.targets.wheel]
packages = ["python/f3dx_router"]

[tool.hatch.build.targets.sdist]
include = [
    "python/f3dx_router",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
