[package]
name = "f3dx-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "In-process Rust router for LLM providers. Hedged-parallel + 429/5xx hot-swap < 1ms."

[lib]
name = "f3dx_router"
crate-type = ["rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

[lints]
workspace = true
